--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,13 @@ body{
 
 .weather-app{
      background: linear-gradient(135deg, #00feba, #5b548a);
-     padding: 20px;
-     border-radius: 8px;
+     padding: 40px 35px;
+     border-radius: 20px;
      box-shadow: 0 2px 10px rgba(0,0,0, 0.1);
      text-align: center;
-     width: 300px;
+     width: 90%;
+     max-width: 470px;
+     height: 450px;
 }
 
 .weather-app h1{
